--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>IFSC 1310 | Your name</title>
   <meta name="description" content="Coursework from IFSC 1310 - spring 2024">
   <meta name="author" content="angel costilla">
-
+<link href="assets/css/style.css" rel="stylesheet" 
 </head>
 
 <body>
   <h1>Angel costilla</h1>
   ,<nav>
     <ul>
-      <li><a href="index.html">prototype assignment</a></li>
+      <li><a href="prototype/">prototype assignment</a></li>
     </ul>
   </nav>
 </body>
