--- a/prototype/index copy.html
+++ b/prototype/index copy.html
@@ -7,7 +7,7 @@
   <title>IFSC 1310 | Your name</title>
   <meta name="description" content="Coursework from IFSC 1310 - spring 2024">
   <meta name="author" content="angel costilla">
-<link href="assets/css/style.css" rel="stylesheet" 
+<link href="assets/css/style.css" rel="stylesheet" </link>
 </head>
 
 <body>
