--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
   <meta charset="utf-8">
 
-  <title>IFSC 1310 | Your name</title>
+  <title>IFSC 1310 | angel costilla</title>
   <meta name="description" content="Coursework from IFSC 1310 - spring 2024">
   <meta name="author" content="angel costilla">
-<link href="assets/css/style.css" rel="stylesheet" </link>
 </head>
 
 <body>
   <h1>Angel costilla</h1>
   ,<nav>
     <ul>
-      <li><a href="prototype/">prototype assignment</a></li>
+      <li><a href="prototype/prototype HTML5 assignment">prototype assignment</a></li>
     </ul>
   </nav>
 </body>
