--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>Angel costilla</h1>
   ,<nav>
     <ul>
-      <li><a href="prototype/prototype HTML5 assignment">prototype assignment</a></li>
+      <li><a href="prototype/index.html">prototype assignment</a></li>
     </ul>
   </nav>
 </body>
