--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="description" content="Keyword rich narrative on site purpose">
   <meta name="author" content="Thomas Wallace">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <main>
