--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-  <h1>Angel costilla</h1>
-  ,<nav>
+  <h1>Angel costilla| IFSC 1310</h1>
+  <nav>
     <ul>
       <li><a href="prototype/index.html">prototype assignment</a></li>
+    <li><a href="css-demo/index.html">css.demo</a></li>
     </ul>
   </nav>
 </body>
