--- a/prototype/index.html
+++ b/prototype/index.html
@@ -80,25 +80,25 @@
     <h4>Collections and archives</h4>
 
    <p> On July 1, 2014, the <strong>UA Little Rock</strong> Collections and Archives division was created. </p>
-   <dl> The division encompasses:</dl>
+   <h3> The division encompasses:</h3>
 
 <ul>
   <li>Ottenheimer Library</li>
 <li>Center for Arkansas History and Culture</li>
 <li>Sequoyah National Research Center</li>
-
-     <div id="links">
+</ul>
     
-     </section>
+     </section id="content">
+     <div id="links">
     <nav class="primary">
       <ul>
-        <li><a href="/workspaces/IFSC-1310/prototype/index copy.html">Home</a></li>
+        <li><a href="https://angel123523.github.io/IFSC-1310/">Home</a></li>
        <li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock" title="ualr link">About</a></li>
         <li><a href="https://ualr.edu/" target="_blank">UALR</a></li>
         <li><a href="mailto:adcostilla@ualr.edu">Contact</a></li>  
       </ul>
     </nav>
-    </div>
+     </div>
     <div id="footer">
     <footer class="primary">
       <h6>&copy; 2024 Angel Costilla | adcostilla@ualr.edu| back to top      
