--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>IFSC 1310 | angel costilla</title>
   <meta name="description" content="Coursework from IFSC 1310 - spring 2024">
   <meta name="author" content="angel costilla">
+  <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
