--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <ul>
       <li><a href="prototype/index.html">prototype assignment</a></li>
     <li><a href="css-demo/index.html">css.demo</a></li>
-    </ul>
+  <li><a href="assets/img/Flexbox-froggy.png">Flexbox-froggy</a></li>  
+  </ul>
   </nav>
 </body>
 </html>
