--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
       <li><a href="prototype/index.html">prototype assignment</a></li>
     <li><a href="css-demo/index.html">css.demo</a></li>
   <li><a href="assets/img/Flexbox-froggy.png">Flexbox-froggy</a></li>  
+  <li>Positioning-lab
+    <ul>
+  </li><a href="positioning-lab/float-1.html">float 1</a> </li> 
+  </li><a href="positioning-lab/float-2.html">float 2</a> </li> 
+  </li><a href="positioning-lab/absolute-1.html">absolute 1</a> </li> 
+  </li><a href="positioning-lab/absolute-2.html">absolute 2</a> </li> 
   </ul>
+    </li>   
   </nav>
 </body>
 </html>
