--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -34,18 +34,31 @@
     }
     #navy {
       background-color: #001f3f;
+      width: 370px;
+      height: 125px;
+      float:right ;
     }
     #teal {
       background-color: #39CCCC;
+      width: 370px;
+      height: 125px;
+      float: left;
     }
     #blue {
       background-color: #0074D9;
+      width: 370px;
+      height: 125px;
+      float: right;
     }
     #aqua {
       background-color: #7FDBFF;
+      width: 370px;
+      height: 125px;
+      float: left;
     }
     #footer {
       background-color: #666;
+      
     }
     h1 {
       color: #000;
