--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="prototype/index.html">prototype assignment</a></li>
     <li><a href="css-demo/index.html">css.demo</a></li>
   <li><a href="assets/img/Flexbox-froggy.png">Flexbox-froggy</a></li>  
+  <li><a href="assets/img/Grid-garden.png">Grid-garden</a></li>
   <li>Positioning-lab
     <ul>
     </li><a href="positioning-lab/float-1.html">float 1</a> </li> 
