--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -36,29 +36,29 @@
       background-color: #001f3f;
       width: 370px;
       height: 125px;
-      float:right ;
+      float:left;
     }
     #teal {
       background-color: #39CCCC;
       width: 370px;
       height: 125px;
-      float: left;
+      float: right;
     }
     #blue {
       background-color: #0074D9;
       width: 370px;
       height: 125px;
-      float: right;
+      float: left;
     }
     #aqua {
       background-color: #7FDBFF;
       width: 370px;
       height: 125px;
-      float: left;
+      float: right;
     }
     #footer {
       background-color: #666;
-      
+      clear:both;
     }
     h1 {
       color: #000;
