--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Positioning Lab</title>
-  <style type="text/css">
+  
+</head>
+   <style type="text/css">
     /* ---------------Box Sizing----------------- */
     html {
       box-sizing: border-box;
@@ -37,28 +39,33 @@
       width: 370px;
       height: 125px;
       float:left;
-    }
+      margin:10px;
+}
     #teal {
       background-color: #39CCCC;
       width: 370px;
       height: 125px;
-      float: right;
+      float: left;
+      margin:10px;
     }
     #blue {
       background-color: #0074D9;
       width: 370px;
       height: 125px;
       float: left;
+      margin:10px;
     }
     #aqua {
       background-color: #7FDBFF;
       width: 370px;
       height: 125px;
-      float: right;
+      float: left;
+      margin:10px;
     }
     #footer {
       background-color: #666;
       clear:both;
+      margin:10px;
     }
     h1 {
       color: #000;
@@ -66,7 +73,6 @@
       padding: 50px;
     }
   </style>
-</head>
 <body>
   <h1>float 1</h1>
   <section id="wrapper">
