--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -34,18 +34,37 @@
     }
     #navy {
       background-color: #001f3f;
+      width: 155px;
+      height: 125px;
+      float:left;
+      margin:20px;
     }
     #teal {
       background-color: #39CCCC;
+      width: 155px;
+      height: 125px;
+      float: left;
+      margin:20px;
     }
     #blue {
       background-color: #0074D9;
+      width: 155px;
+      height: 125px;
+      float: left;
+      margin:20px;
     }
     #aqua {
       background-color: #7FDBFF;
+      width: 155px;
+      height: 125px;
+      float: left;
+      margin:20px;
     }
     #footer {
       background-color: #666;
+      clear:both;
+      margin:10px;
+    }
     }
     h1 {
       color: #000;
@@ -53,6 +72,7 @@
       padding: 50px;
     }
   </style>
+
 </head>
 <body>
   <h1>float 2</h1>
