added bear image

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </li><a href="positioning-lab/absolute-1.html">absolute 1</a> </li> 
     </li><a href="positioning-lab/absolute-2.html">absolute 2</a> </li> 
     </ul>
+    <li><a href="assets/img/BWAER.png">Bear-image</a></li>
     <li><a href="assets/img/who-taught-the-frog-to-fly?.png">who-taught-the-frog-to-fly?</a></li>
     </li>   
   </nav>
