--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </ul>
     <li><a href="assets/img/BWAER.png">Bear-image</a></li>
     <li><a href="assets/img/who-taught-the-frog-to-fly?.png">who-taught-the-frog-to-fly?</a></li>
-    </li>   
+    <li><a href="assets/img/Untitled-2.png">Star Co image</a></li>
+  </li>   
   </nav>
 </body>
 </html>
