fixed frog photo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </li><a href="positioning-lab/absolute-2.html">absolute 2</a> </li> 
     </ul>
     <li><a href="assets/img/BWAER.png">Bear-image</a></li>
-    <li><a href="assets/img/who-taught-the-frog-to-fly?.png">who-taught-the-frog-to-fly?</a></li>
+    <li><a href="assets/img/Untitled-3.png">who-taught-the-frog-to-fly?</a></li>
     <li><a href="assets/img/Untitled-2.png">Star Co image</a></li>
   </li>   
   </nav>
