--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <li><a href="assets/img/Untitled-3.png">who-taught-the-frog-to-fly?</a></li>
     <li><a href="assets/img/Untitled-2.png">Star Co image</a></li>
   </li>   
+  <li><a href="">SpaceX Dragon first draft</a></li>
+  </li> 
   </nav>
 </body>
 </html>
