added history html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <li><a href="assets/img/Untitled-3.png">who-taught-the-frog-to-fly?</a></li>
     <li><a href="assets/img/Untitled-2.png">Star Co image</a></li>
   </li>   
-  <li><a href="spacex-dragon redo/index.html">SpaceX Dragon first draft</a></li>
+  <li><a href="spacex-dragon-redo/index.html">SpaceX Dragon first draft</a></li>
   </li> 
   </nav>
 </body>
