--- a/spacex-dragon-redo/index.html
+++ b/spacex-dragon-redo/index.html
@@ -17,8 +17,8 @@
     <nav role="navigation">
         <h2>The First Private Spacecraft to the space station</h2>
         <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="History.html">History</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="history.html">History</a></li>
           <li><a href=FAQ.html>FAQ</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
