added history and faq pages

--- a/spacex-dragon-redo/history.html
+++ b/spacex-dragon-redo/history.html
@@ -17,9 +17,9 @@ Spacex</h1>
   <nav role="navigation">
       <h2>The History of Space X</h2>
       <ul>
-        <li><a href="spacex-dragon redo/index.html">Home</a></li>
-        <li><a href="space-dragon-redo/history.html">History</a></li>
-        <li><a href=FAQ.html>FAQ</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="history.html">History</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@ Spacex</h1>
    <p> On 3 June 2017, the CRS-11 capsule largely assembled from previously flown components from the CRS-4 mission in September 2014 was launched again for the first time, with the hull, structural elements, thrusters, harnesses, propellant tanks, plumbing and many of the avionics reused while the heat shield, batteries and components exposed to sea water upon splashdown for recovery were replaced.
 <p>
 </section>
-    <section id="columns">
+    <section id="table">
   <div class="container">
     <h2>Recent Missions</h2>
       <table style="width:100">
@@ -77,6 +77,7 @@ Spacex</h1>
           <td>CAPE CANAVERAL</td>
           <td>DRAGON  & FALCON 9 </td>
         </tr>
+        </table>
     </div>
 </section> 
      <footer id="copyright"class="primary">
