--- a/spacex-dragon-redo/contact.html
+++ b/spacex-dragon-redo/contact.html
@@ -17,9 +17,9 @@ Spacex</h1>
   <nav role="navigation">
       <h2>Contact information</h2>
       <ul>
-        <li><a href="spacex-dragon redo/index.html">Home</a></li>
-        <li><a href="space-dragon-redo/history.html">History</a></li>
-        <li><a href=FAQ.html>FAQ</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="history.html">History</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
