--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li><a href="assets/img/Untitled-2.png">Star Co image</a></li>
   </li>   
   <li><a href="spacex-dragon-redo/index.html">SpaceX Dragon first draft</a></li>
+  <li><a href="spacex-dragon-redo revisoin/index.html">SpaceX Dragon revisoin</a></li>
   </li> 
   </nav>
 </body>
