added progressive enhancement

--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
   <li><a href="spacex-dragon-redo revisoin/index.html">SpaceX Dragon revisoin</a></li>
   </li> 
   </nav>
+  <section id="content" class="container">
+    <h2> Thoughts on Progressive Enhancement.</h2>
+      <p>Progressive Enhancement is the method of site building that focuses on content that can be accessed by any browser. Compared to the Graceful degradation focuses on building websites that are optimized for the newest web browsers. </p>
+    <p>
+      I believe that Progressive Enhancement is important because it allows website makers to focus on their content. It also allows for your content to be accessible to an even larger audience as it will be optimized for most web browsers. 
+    </p>
+  </section>
 </body>
 </html>
