--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   </li>   
   <li><a href="spacex-dragon-redo/index.html">SpaceX Dragon first draft</a></li>
   <li><a href="spacex-dragon-redo revisoin/index.html">SpaceX Dragon revisoin</a></li>
+  <li><a href="slick-demo/index.html">slick-demo</a></li>
   </li> 
-  
   </nav>
   <section id="content" class="container">
     <h2> Thoughts on Progressive Enhancement.</h2>
