--- a/slick-demo/index.html
+++ b/slick-demo/index.html
@@ -11,17 +11,17 @@
   <!-- Third Party Stylesheets go here -->
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/slick.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/accessible-slick-theme.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assests/css/style.css">
 </head>
 
 <body>
 
 <!-- Content -->
 <div class="fade container">
-    <div><img src="assets/img/1.jpg" alt="stars"></div>
-    <div><img src="assets/img/2.jpg" alt="stars"></div>
-    <div><img src="assets/img/3.jpg" alt="stars"></div>
-    <div><img src="assets/img/4.jpg" alt="stars"></div>
+    <div><img src="assests/img/1.jpg" alt="stars"></div>
+    <div><img src="assests/img/2.jpg" alt="stars"></div>
+    <div><img src="assests/img/3.jpg" alt="stars"></div>
+    <div><img src="assests/img/4.jpg" alt="stars"></div>
   </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/slick.min.js"></script>
