--- a/slick-demo/index.html
+++ b/slick-demo/index.html
@@ -26,6 +26,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.21.0/prism.min.js"></script> 
-<script src="assets/js/scripts.js"></script>
+<script src="assests/js/script.js"></script>
+
 </body>
 </html>
