revising final draft

--- a/spacex-dragon-redo revisoin/index.html
+++ b/spacex-dragon-redo revisoin/index.html
@@ -33,7 +33,7 @@
   <section id="columns">
     <div class="container">
       <h2>Configurations</h2>
-      <article class="info">
+      <div><article class="info">
         <header>
           <figure> 
           <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZhnKyxBj79PqmQEtSfGLqrUgEwnLtGKukBXfLO9vj4vpBtL-SYpy7JEu5_SjILfTIhLqLMnSa8VDNZcXV1mugKymgYwXGSqBGa2kdZqZv6jByEATci_RDGyEnIuvlS1w=w958-h909-v0" >
@@ -47,8 +47,8 @@
         <li>DELIVERY AND RETURN SERVICES - Dragon is the first commercial spacecraft to deliver cargo to the International Space Station and currently the only cargo spacecraft flying capable of returning significant amounts of cargo to Earth. Dragon accommodates pressurized cargo in the capsule as well as unpressurized cargo in its trunk.</li>
         <li>VERSATILE CARGO RACKS - The racks are a honeycomb carbon-aluminum construction designed for efficient packing in a zero-gravity environment. They accommodate a variety of standard-size NASA cargo bags as well as freezers for carrying materials such as biological samples.</li>
       </ul>
-      </article>
-    <article class="info">
+      </article></div>
+      <div><article class="info">
            <header>
               <figure>
               <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihYtVtPLtR3V6Aw52WljD4oAyIa4PvPxf8q9L72W9RU5MzT25bXMDDr3o2bDArAFbHkArBGdFKiaK20n9XbgzZuX6A-7VWZv14TJFsWoEkZYTzT-zYO9zxfv4hdWkehuag=w958-h909-v0">
@@ -62,8 +62,8 @@
 <li> CREW UPGRADES - Dragon will be the world’s safest and most reliable crew transport vehicle, with seating for seven, life-support systems, controls with manual capability, and a powered launch escape system.</li>
   <li> FIRST LAUNCH - Upgrades to Dragon are currently in progress. Dragon’s first manned test flight is expected to take place as early as 2018.</li>
               </ul>
-       </article>
-    <article class="info"> 
+       </article></div>
+       <div><article class="info"> 
               <header>
             <figure>
               <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihYAjYRbkEzYt8Bvei3cl0k0Jb2wvtNZtxg4lp0CNuOQASqpREChdyUMOA2pMXQJXCGzRM86IVSqJl_VF2tF1Oa4yUiLjBfO8EPGFDct35PS3C6gpGSBediDWuyIXmDkgw=w958-h909-v0">
@@ -76,11 +76,16 @@
 <li> FACILITATING RESEARCH - DragonLab is a free-flying, unmanned platform designed for research and testing in a microgravity environment independent of the International Space Station.
 <li>CAPABILITIES - DragonLab can readily accommodate instrument and sensor testing, space physics and relativity experiments, radiation effects research, and many other microgravity tests.</li>
               </ul>    
-   </article>
+   </article></div>
       </div>
   </section> 
   <section id="diagram" class="container">
-    <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZgWFl_BUoXvxDQaQZOo6Q41WVMur9ixAgusQs-cLPoFJTchRsQhkgQGjFmO498eCVYknyxYIQC7cxS33qf8RInyDP_jFp8Yu2zotmN5No6k-cTZaoh6XDSZvtQ4f4Fpg=w958-h909-v0" alt="dragon launch to touchdown diagram" class="diagram">
+    <div class="photo container">
+      <div><img src="assests/img/1.jpg" alt="stars"></div>
+      <div><img src="assests/img/2.jpg" alt="stars"></div>
+      <div><img src="assests/img/3.jpg" alt="stars"></div>
+      <div><img src="assests/img/4.jpg" alt="stars"></div>
+    </div>
   </section>
   <footer id="copyright"class="primary">
       <h6>&copy; 2022 SPACEX |
