--- a/spacex-dragon-redo revisoin/index.html
+++ b/spacex-dragon-redo revisoin/index.html
@@ -85,6 +85,10 @@
       <div><img src="assests/img/2.jpg" alt="stars"></div>
       <div><img src="assests/img/3.jpg" alt="stars"></div>
       <div><img src="assests/img/4.jpg" alt="stars"></div>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.21.0/prism.min.js"></script> 
+<script src="assets/js/script.js"></script>
     </div>
   </section>
   <footer id="copyright"class="primary">
@@ -92,11 +96,6 @@
         <a href="mailto:adcostilla@ualr.edu">REPORT A PROBLEM</a> 
   </h6>
     </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@accessible360/accessible-slick@1.0.1/slick/slick.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/prismjs@1.21.0/prism.min.js"></script> 
-<script src="assests/js/script.js"></script>
 
 </main>
 </body>
