--- a/spacex-dragon-redo revisoin/index.html
+++ b/spacex-dragon-redo revisoin/index.html
@@ -31,7 +31,7 @@
   </section>
     
   <section id="columns">
-    <div class="container">
+    <div class=" slidecontent container">
       <h2>Configurations</h2>
       <div><article class="info">
         <header>
