added slide show

--- a/spacex-dragon-redo revisoin/index.html
+++ b/spacex-dragon-redo revisoin/index.html
@@ -34,9 +34,9 @@
     
   <section id="columns">
     <div class=" slidecontent container">
-      <h2>Configurations</h2>
       <article class="info">
         <header>
+          <h2>Configurations:</h2>
           <figure> 
           <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZhnKyxBj79PqmQEtSfGLqrUgEwnLtGKukBXfLO9vj4vpBtL-SYpy7JEu5_SjILfTIhLqLMnSa8VDNZcXV1mugKymgYwXGSqBGa2kdZqZv6jByEATci_RDGyEnIuvlS1w=w958-h909-v0" >
             <figcaption>Dragon Cargo interior</figcaption>         
