--- a/spacex-dragon-redo revisoin/index.html
+++ b/spacex-dragon-redo revisoin/index.html
@@ -52,6 +52,7 @@
       </article>
       <article class="info">
            <header>
+            <h2>Configurations:</h2>
               <figure>
               <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihYtVtPLtR3V6Aw52WljD4oAyIa4PvPxf8q9L72W9RU5MzT25bXMDDr3o2bDArAFbHkArBGdFKiaK20n9XbgzZuX6A-7VWZv14TJFsWoEkZYTzT-zYO9zxfv4hdWkehuag=w958-h909-v0">
               <figcaption> Dragon crew interior</figcaption>
@@ -67,6 +68,7 @@
        </article>
        <article class="info"> 
               <header>
+                <h2>Configurations:</h2>
             <figure>
               <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihYAjYRbkEzYt8Bvei3cl0k0Jb2wvtNZtxg4lp0CNuOQASqpREChdyUMOA2pMXQJXCGzRM86IVSqJl_VF2tF1Oa4yUiLjBfO8EPGFDct35PS3C6gpGSBediDWuyIXmDkgw=w958-h909-v0">
               <figcaption> Dragon Lab</figcaption>
