--- a/spacex-dragon-redo revisoin/index.html
+++ b/spacex-dragon-redo revisoin/index.html
@@ -85,7 +85,7 @@
   </section> 
   <section id="diagram" class="container">
     <div class="photo container">
-      <div><img src="assets/img/dragon-exterior.jpg" alt="dragon dragon-exterior"></div>
+      <div><img src="assets/img/dragon-exterior sfs.jpg" alt="dragon dragon-exterior"></div>
       <div><img src="assets/img/Dragon_V2_01.png" alt="dragon-diagram"></div>
       <div><img src="assets/img/launch.jpg" alt="dragon-launch"></div>
       <div><img src="assets/img/SpaceX_Dragon_2_Pad_Abort_Test_Infographic.jpg" alt="dragon-abort-test"></div>
