fixing slide show for the lastime (hopefully)

--- a/spacex-dragon-redo revisoin/index.html
+++ b/spacex-dragon-redo revisoin/index.html
@@ -86,9 +86,9 @@
   <section id="diagram" class="container">
     <div class="photo container">
       <div><img src="assets/img/dragon-exterior sfs.jpg" alt="dragon dragon-exterior"></div>
-      <div><img src="assets/img/Dragon_V2_01.png" alt="dragon-diagram"></div>
+      <div><img src="assets/img/Dragon_V2_01 (1).png" alt="dragon-diagram"></div>
       <div><img src="assets/img/launch.jpg" alt="dragon-launch"></div>
-      <div><img src="assets/img/SpaceX_Dragon_2_Pad_Abort_Test_Infographic.jpg" alt="dragon-abort-test"></div>
+      <div><img src="assets/img/SpaceX_Dragon_2_Pad_Abort_Test_Infographic (1).jpg" alt="dragon-abort-test"></div>
      
     </div>
   </section>
